# cxxplot

./: .clang-format  CMakeLists.txt  README.md  license.txt
cmake/: cxxplotConfig.cmake.in  cxxplotConfigOpenGL.cmake.in
examples/: CMakeLists.txt
examples/002_basic_styling/: main.cpp
examples/003_barnsley_fern/: main.cpp
examples/005_simple/: main.cpp
examples/006_ranges/: main.cpp
examples/007_line_color_order/: main.cpp
examples/009_basic_shapes/: main.cpp
examples/010_opengl/: main.cpp
examples/012_legend_columns/: main.cpp
examples/013_legend_entry_visibility/: CMakeLists.txt  main.cpp
examples/014_individual_x_y_arrays/: main.cpp
examples/01_basic/: main.cpp
examples/03_barnsley_fern/: main.cpp
examples/04_compute_and_plot/: main.cpp
examples/06_ranges/: main.cpp
examples/07_line_color_order/: main.cpp
examples/08_animation/: main.cpp
examples/101_cmake_fetchcontent/: CMakeLists.txt
examples/101_cmake_setup1/: CMakeLists.txt  main.cpp
examples/102_cmake_findpackage/: CMakeLists.txt
examples/11_logplots/: main.cpp
include/cxxplot/: align.hpp  color.hpp  concepts.hpp  cxxplot  execution.hpp  figure.hpp  gettersetter.hpp  graph.hpp  image.hpp  named_parameter.hpp  point2d.hpp  range.hpp  styles.hpp  typetraits.hpp  utils.hpp  window.hpp
licenses/QCustomPlot/: readme.txt
licenses/Qt/: readme.txt
src/: align.cpp  color.cpp  execution.cpp  execution_p.hpp  figure.cpp  graph.cpp  image.cpp  images.qrc  qcustomplot.cpp  qcustomplot.h  range.cpp  styles.cpp  styles_p.hpp  utils.cpp  version.cpp  widget.cpp  widget.hpp  window.cpp
tests/: CMakeLists.txt
tests/01_test/: CMakeLists.txt  main.cpp
tests/02_test/: CMakeLists.txt  main.cpp
tests/03_test/: CMakeLists.txt  main.cpp
tests/04_test/: CMakeLists.txt  main.cpp
tests/05_test/: CMakeLists.txt  main.cpp
tests/06_test_csv/: CMakeLists.txt  main.cpp
tests/07_test_image/: CMakeLists.txt  main.cpp
