add_subdirectory( 001_basic )
add_subdirectory( 002_basic_styling )
add_subdirectory( 003_barnsley_fern )
add_subdirectory( 004_compute_and_plot )
add_subdirectory( 005_simple )
add_subdirectory( 006_ranges )
add_subdirectory( 007_line_color_order )
add_subdirectory( 008_animation )
add_subdirectory( 009_basic_shapes )
add_subdirectory( 010_opengl )
add_subdirectory( 011_logplots )
add_subdirectory( 012_legend_columns )
add_subdirectory( 013_legend_entry_visibility )
